# findere

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  K31z0_bf1.txt  K31z0_bfopti.txt  K31z0_findereoptiCfp.txt  K31z10_findere1.txt  K31z10_findereopti.txt  K31z10_findereoptiCfp.txt  K31z15_findere1.txt  K31z15_findereopti.txt  K31z15_findereoptiCfp.txt  K31z16_findere1.txt  K31z16_findereopti.txt  K31z16_findereoptiCfp.txt  K31z18_findere1.txt  K31z18_findereopti.txt  K31z18_findereoptiCfp.txt  K31z19_findere1.txt  K31z19_findereopti.txt  K31z19_findereoptiCfp.txt  K31z20_findere1.txt  K31z20_findereopti.txt  K31z20_findereoptiCfp.txt  K31z3_findereopti.txt  K31z3_findereoptiCfp.txt  README.md  TODO.md  afac.fa  analyseResponse.py  build.sh  findere1.txt  loop.py  makeDiff.py  memused.sh  plot_results.py  results.json  scriptCluster.sh  small_build.sh
.github/workflows/: findere-linux.yaml
cookbook/: naturalLanguage.md
data/: Listeria phage.fasta  reads_hmp.fasta  scenario1.json  scenario2.json  scenario3.json  truc.txt
data/texts/: Andromaque.txt  AndromaqueAndHorace.txt  Horace.txt  Le_Cid.txt  Lettres_persanes.txt  Maastricht.txt  Othon.txt  contemplations.txt
paper_companion/: README.md
paper_companion/HMP_K_variation/: README.md  analyse.py
paper_companion/HMP_analyses/: FP.R  FP_TIME.R  README.md  data_time_K31_hmp.txt
paper_companion/HMP_analyses/FPR_wrt_size/: FP_analysis.py  FP_wrt_SIZE.R  README.md  SIZE_wrt_FP.R  data_FP_wrt_size.txt
paper_companion/HMP_analyses/FPR_wrt_size/tests_with_kbf/: FP_wrt_SIZE.R  data_FP_kbf_wrt_size.txt  data_FP_wrt_size.txt
paper_companion/HMP_analyses/fpr_wrt_z/: FP_wrt_Z.R  FP_wrt_Z_only_findere.R  FP_wrt_Z_simple.R  README.md  analyse.py  data_FP_K31_hmp.txt
paper_companion/HMP_analyses/reservoir/: data_FP_K31_hmp_fixedFPR.txt
paper_companion/HMP_analyses/wrt_K/: FP_TIME_wrt_K.R  FP_TIME_wrt_K_2_plots.R  README.md  analyse.py  data_wrtK.txt
paper_companion/HMP_fix_size/: FP_analysis.py
paper_companion/QTF_analyses/: README.md  analyse_FP_k31_e1.txt  analyse_FP_k31_e10.txt  analyse_FP_k31_e2.txt  analyse_FP_k31_e20.txt  analyse_FP_k31_e5.txt  analyse_bf_FPs.py
paper_companion/naturalLanguage/: FP_wrt_SIZE_wikipedia.R  RAEDME.md  README.md  data_findereOnWikipedia.txt  make_corpus.py
src/: CMakeLists.txt  FileIndexer.cpp  FileIndexer.hpp  README.md  index.cpp  loopOverBits.cpp  main.cpp  mainPaper.cpp  mainPaperFixedSize.cpp  mainPaperKVariation.cpp  mainPaperNaturalText.cpp  mainPaperNaturalTextTime.cpp  querier.cpp  querier.hpp  query.cpp  similarity.cpp  similarity.hpp  test.cpp  truth.cpp  truth.hpp  utils.cpp  utils.hpp
src/drafts/: README.md  analyseResponse.py  analyseSubK.py  rought draft.cpp
src/libraries/: CMakeLists.txt
src/libraries/evaluation/: CMakeLists.txt  evaluation.cpp  evaluation.hpp  indexer.hpp  querier.hpp
src/libraries/findere/: customAMQ.hpp  customResponse.hpp  indexer.hpp  querier.hpp  utils.hpp
src/libraries/findere/reader/: fasta_file.hpp  file_manager.hpp  read_file.hpp
src/libraries/indexer/: CMakeLists.txt  indexer.cpp  indexer.hpp
src/libraries/querier/: CMakeLists.txt  QTF.hpp  QTFNoSplitKmer.cpp  QTFNoSplitKmer.hpp  noQTF.cpp  noQTF.hpp  querier.cpp  querier.hpp
src/libraries/similarity/: CMakeLists.txt  similarity.cpp  similarity.hpp
src/libraries/truth/: CMakeLists.txt  truth.cpp  truth.hpp
src/libraries/utils/: CMakeLists.txt  argsUtils.hpp  customAMQ.hpp  fasta_file.hpp  fastq_file.hpp  file_manager.hpp  read_file.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  test_BF.cpp  test_FPR.cpp  test_QTF.cpp  test_QTFKPlusZ.cpp  test_QTFSkip.cpp  test_findere.cpp  test_queryFilterOrTruth.cpp  test_queryFilterOrTruthIsTheSameAsWhatsInThePaper.cpp  test_similarity.cpp  testutils.hpp
