if (CompileAll)
add_executable(paper mainPaper.cpp)
add_executable(paperKVariation mainPaperKVariation.cpp)
add_executable(paperFixedSize mainPaperFixedSize.cpp)
add_executable(paperNaturalText mainPaperNaturalText.cpp)
add_executable(paperNaturalTextTime mainPaperNaturalTextTime.cpp)
endif()
add_executable(index index.cpp)
add_executable(query query.cpp)

if (CompileAll)
target_link_libraries(paper libbf_static z)
target_link_libraries(paperKVariation libbf_static z)
target_link_libraries(paperFixedSize libbf_static z)
target_link_libraries(paperNaturalText libbf_static z)
target_link_libraries(paperNaturalTextTime libbf_static z)
endif()
target_link_libraries(index libbf_static z)
target_link_libraries(query libbf_static z)